fix layout overflow
Fix layout overflow within about 720 and 820 px of window width

--- a/src/common.blocks/page/page.scss
+++ b/src/common.blocks/page/page.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
-  max-height: 236rem*0.55;
+  max-height: 140rem;
   padding-left: 3.5rem;
   padding-right: 3.309rem;
   padding-top: 4.4rem;
